# farmer_cli

./: .gitattributes  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.json  AGENTS.md  README.md  aTruth.md  env.example  preferences.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_app.sh  setup.py  uv.toml
.cursor/rules/: python.mdc
.kiro/specs/farmer-cli-completion/: design.md  requirements.md  tasks.md
data/database/: cli_app.db
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  THEMING_GUIDE.md
src/: __init__.py  cli.py  themes.py
src/config/: __init__.py  default_config.json  settings.py
src/exceptions/: __init__.py  cli_exceptions.py
src/farmer_cli/: __init__.py  __main__.py  cli.py  exceptions.py
src/farmer_cli/core/: __init__.py  app.py  constants.py  database.py  error_messages.py  logging_config.py
src/farmer_cli/features/: __init__.py  base.py  configuration.py  data_processing.py  export.py  file_browser.py  help_system.py  log_viewer.py  system_tools.py  theme_showcase.py  user_manager.py  video_downloader.py  weather.py
src/farmer_cli/services/: __init__.py  async_tasks.py  download_manager.py  export.py  feedback.py  format_selector.py  output_config.py  playlist_handler.py  preferences.py  ytdlp_wrapper.py
src/farmer_cli/ui/: __init__.py  console.py  download_ui.py  layouts.py  menu.py  prompts.py  welcome.py  widgets.py
src/farmer_cli/utils/: __init__.py  cleanup.py  conflict_resolver.py  decorators.py  directory_utils.py  filename_template.py  url_utils.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_interface.py  test_download_workflow.py  test_user_workflow.py
tests/property/: __init__.py  test_batch_failure_isolation_properties.py  test_cli_argument_properties.py  test_concurrent_download_properties.py  test_database_consistency_properties.py  test_database_rollback_properties.py  test_directory_validation_properties.py  test_duplicate_detection_properties.py  test_error_logging_properties.py  test_error_message_properties.py  test_export_import_roundtrip_properties.py  test_filename_template_properties.py  test_history_entry_properties.py  test_preference_validation_properties.py  test_preferences_roundtrip_properties.py  test_queue_item_properties.py  test_queue_persistence_properties.py  test_url_validation_properties.py  test_user_name_validation_properties.py  test_user_serialization_properties.py  test_video_format_properties.py
tests/unit/: __init__.py  test_app.py  test_async_tasks.py  test_cleanup.py  test_cli.py  test_configuration_feature.py  test_conflict_resolver.py  test_console.py  test_data_processing.py  test_database.py  test_decorators.py  test_directory_utils.py  test_download_manager.py  test_download_ui.py  test_export_feature.py  test_export_service.py  test_feedback.py  test_file_browser.py  test_filename_template.py  test_format_selector.py  test_help_system.py  test_layouts.py  test_log_viewer.py  test_main.py  test_menu.py  test_output_config.py  test_playlist_handler.py  test_prompts.py  test_system_tools.py  test_theme_showcase.py  test_url_utils.py  test_user_manager.py  test_validators.py  test_video_downloader.py  test_weather.py  test_welcome.py  test_widgets.py  test_ytdlp_wrapper.py
