[build-system]
requires = ["setuptools>=69.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmer-cli"
version = "0.2.0"
description = "A modular CLI application with Rich UI for video downloading and system management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Farmer CLI Team", email = "support@farmercli.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Video",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["cli", "terminal", "rich", "video", "downloader", "yt-dlp"]
dependencies = [
  "rich>=13.7.0",
  "click>=8.1.7",
  "yt-dlp>=2024.1.1",
  "pydantic>=2.5.3",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "websockets>=12.0",
  "curl_cffi>=0.5.10",
  "certifi>=2023.11.17",
  "sqlalchemy>=2.0.25",
  "brotli>=1.1.0",
  "mutagen>=1.47.0",
  "pycryptodomex>=3.19.1",
  "pathlib2>=2.3.7",
  "xattr>=0.10.1; sys_platform != 'win32'",
  "secretstorage>=3.3.3; sys_platform == 'linux'",
  "prompt-toolkit>=3.0.43",
  "fuzzywuzzy>=0.18.0",
  "python-Levenshtein>=0.23.0",
  "pdfkit>=1.0.0",
  "reportlab>=4.0.0",
  "ffmpeg-python>=0.2.0",
  "ffprobe>=0.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.0.3",
  "twine>=5.0.0",
  "setuptools>=69.1.0",
  "ipython>=8.21.0",
  "ipykernel>=6.29.2",
  "ruff>=0.2.1",
  "black>=24.2.0",
  "isort>=5.13.2",
  "pre-commit>=3.6.1",
  "mypy>=1.8.0",
  "mypy-extensions>=1.0.0",
  "pyright>=1.1.350",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-benchmark>=4.0.0",
  "codecov>=2.1.13",
  "types-requests>=2.31.0.20240106",
  "tox>=4.12.1",
  "mkdocs>=1.5.3",
  "mkdocstrings>=0.24.0",
  "mkdocs-material>=9.5.9",
  "mkdocstrings-python>=1.8.0",
  "Pygments>=2.17.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-benchmark>=4.0.0",
  "pytest-mock>=3.12.0",
  "hypothesis>=6.92.0",
  "codecov>=2.1.13",
  "types-requests>=2.31.0.20240106",
]

[project.urls]
Homepage = "https://github.com/deadcoast/farmer-cli"
Documentation = "https://farmercli.readthedocs.io"
Repository = "https://github.com/deadcoast/farmer-cli.git"
Issues = "https://github.com/deadcoast/farmer-cli/issues"

[project.scripts]
farmer-cli = "farmer_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["farmer_cli*"]

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
skip-magic-trailing-comma = true
force-exclude = '''
/(
  | docs
  | setup.py
)/
'''

[tool.isort]
py_version = 310
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = []
known_local_folder = []
# style: black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
lines_after_imports = 2
force_single_line = true
skip_glob = ["docs/*", "setup.py"]
filter_files = true

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
extend-exclude = ["docs", "test", "tests"]

[tool.ruff.lint]
select = ["F", "E"]
extend-select = ["W", "C90", "I", "N", "B", "A", "C4", "PERF", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = false
docstring-code-format = true

[tool.mypy]
# Platform configuration
python_version = "3.10"
# imports related
ignore_missing_imports = true
follow_imports = "silent"
# None and Optional handling
no_implicit_optional = false
strict_optional = false
# Configuring warnings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = false
# Untyped definitions and calls
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
# Disallow dynamic typing
disallow_subclassing_any = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
# Miscellaneous strictness flags
allow_untyped_globals = true
allow_redefinition = true
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
exclude = ["docs", "test", "tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUntypedNamedTuple = false
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false
exclude = ["docs", "setup.py"]


# ---------------------------------------------------------------------------
# Pytest Configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests for individual components",
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests for feature workflows",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/farmer_cli"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
